# PJSIP-Client

./: CMakeLists.txt
Assets/: Sample-mp4.sdp
include/: MyAccount.h  MyAudioStreamer.h  MyCall.h  MyVideo.h  MyVideoStreamer.h
src/: CMakeLists.txt  MyAccount.cpp  MyAudioStreamer.cpp  MyCall.cpp  MyVideo.cpp  MyVideoStreamer.cpp  ReadVideoStream.cpp  StreamAudio.cpp  main.cpp  stream.cpp
